--- a/css/app.css
+++ b/css/app.css
@@ -12,6 +12,9 @@ body{
 body{
 	-webkit-overflow-scrolling:touch;
 }
+body.about{
+	overflow:hidden;
+}
 
 html{
 	position:relative;
@@ -475,15 +478,19 @@ footer .acc{
 	background:rgba(255,255,255,0.8);
 	text-transform: uppercase;
 	font-size: 16px;
-	padding:10px 0;
+	padding:5px 0;
 	border-top:1px solid #666;
 	border-bottom:1px solid #666;
 	cursor:pointer;
-	-webkit-transform:scale(1.18);
-    -moz-transform:scale(1.18);
-    -ms-transform:scale(1.18);
-    -o-transform:scale(1.18);
-     transform:scale(1.18);
+	-webkit-transform:scale(1.1);
+    -moz-transform:scale(1.1);
+    -ms-transform:scale(1.1);
+    -o-transform:scale(1.1);
+     transform:scale(1.1);
+}
+.hover-title small{
+	display:block;
+	font-size:0.7em;
 }
 #positions > div:hover .hover-title,
 #positions > div.active .hover-title{
@@ -531,6 +538,10 @@ footer .acc{
 #chapters .part2.open{
 	display:block
 }
+.dropcap{
+	height:100px;
+	width:auto;
+}
 .expand{
 	font-size:2em;
 	color:rgb(220,111,188);
@@ -546,7 +557,7 @@ footer .acc{
 	display:none;
 }
 .expand.open .open{
-	display:block;
+	display:inline;
 }
 
 .acrostic{
