--- a/css/mq.css
+++ b/css/mq.css
@@ -5,7 +5,7 @@
 		width:100%;
 	}
 
-	#positions > div:hover img{
+	.no-touch #positions > div:hover img{
 		transform:none;
 	}
 
@@ -117,8 +117,8 @@
 
 /* HOVER FOR FULL SITE ONLY */
 @media (min-width:769px){
-	#positions > div:hover img,
-	#positions > div.active img{
+	.no-touch #positions > div:hover img,
+	.no-touch #positions > div.active img{
 		-webkit-transform:scale(1.1);
 		-moz-transform:scale(1.1);
 		-ms-transform:scale(1.1);
@@ -134,25 +134,25 @@
 	#support-the-cause [data-cancer-type=breast]{
 		background-color:#33ccff;
 	}
-	#support-the-cause [data-cancer-type=breast] a:hover{
+	.no-touch #support-the-cause [data-cancer-type=breast] a:hover{
 		color:#33ccff;
 	}
 	#support-the-cause [data-cancer-type=testicular]{
 		background-color:#33ccff;
 	}
-	#support-the-cause [data-cancer-type=testicular] a:hover{
+	.no-touch #support-the-cause [data-cancer-type=testicular] a:hover{
 		color:#33ccff;
 	}
 	#support-the-cause [data-cancer-type=skin]{
 		background-color:#33ccff;
 	}
-	#support-the-cause [data-cancer-type=skin] a:hover{
+	.no-touch #support-the-cause [data-cancer-type=skin] a:hover{
 		color:#33ccff;
 	}
 	#support-the-cause [data-cancer-type=prostate]{
 		background-color:#33ccff;
 	}
-	#support-the-cause [data-cancer-type=prostate] a:hover{
+	.no-touch #support-the-cause [data-cancer-type=prostate] a:hover{
 		color:#33ccff;
 	}
 }
@@ -162,7 +162,7 @@
 		width:300px;
 		margin:0 auto;
 	}
-	#support-the-cause .cs-button:hover{
+	.no-touch #support-the-cause .cs-button:hover{
 		color:#fff;
 	}
 	#support-the-cause > div{
@@ -173,7 +173,7 @@
 		border-color:#f0532a;
 		color:#f0532a;
 	}
-	#support-the-cause [data-cancer-type=breast] a:hover{
+	.no-touch #support-the-cause [data-cancer-type=breast] a:hover{
 		background-color:#f0532a;
 	}
 	#support-the-cause [data-cancer-type=breast] h4{
@@ -183,7 +183,7 @@
 		border-color:#f0532a;
 		color:#f0532a;
 	}
-	#support-the-cause [data-cancer-type=testicular] a:hover{
+	.no-touch #support-the-cause [data-cancer-type=testicular] a:hover{
 		background-color:#f0532a;
 	}
 	#support-the-cause [data-cancer-type=testicular] h4{
@@ -193,7 +193,7 @@
 		border-color:#f0532a;
 		color:#f0532a;
 	}
-	#support-the-cause [data-cancer-type=skin] a:hover{
+	.no-touch #support-the-cause [data-cancer-type=skin] a:hover{
 		background-color:#f0532a;
 	}
 	#support-the-cause [data-cancer-type=skin] h4{
@@ -203,7 +203,7 @@
 		border-color:#f0532a;
 		color:#f0532a;
 	}
-	#support-the-cause [data-cancer-type=prostate] a:hover{
+	.no-touch #support-the-cause [data-cancer-type=prostate] a:hover{
 		background-color:#f0532a;
 	}
 	#support-the-cause [data-cancer-type=prostate] h4{
